# Met-Eireann-QC

./: .gitignore  Buddy Check and Buddy Event Check Examples.ipynb  Custom Range Check Climatology Examples.ipynb  Custom Range Check Climatology.ipynb  Custom_Checks.py  Data_Importation_and_Function_Definition.py  First Guess Test Examples.ipynb  Isolation Check Examples.ipynb  Live_Station_Data_Importation.py  Metadata Check Examples.ipynb  Range Check and Range Check Climatology Examples.ipynb  Resistant Spatial Consistency Test Examples.ipynb  Spatial Consistency Test Examples.ipynb  TITAN on WOW data.ipynb  WOW_stations_QC.py
.ipynb_checkpoints/: Intro to titanlib-checkpoint.ipynb  Plotting Geospatial Data-checkpoint.ipynb  TITAN on WOW data-checkpoint.ipynb
titanlib/tests/: sct_resistant_test.py
titanlibcustom/: CMakeLists.txt  README.md
titanlibcustom/debian/: changelog  control  copyright  watch
titanlibcustom/docs/: DoxygenLayout.xml  config.in
titanlibcustom/extras/SWIG/: titanlibcustom.i
titanlibcustom/extras/SWIG/R/: CMakeLists.txt
titanlibcustom/extras/SWIG/python/: CMakeLists.txt  setup.in.py
titanlibcustom/extras/SWIG/python/devel/: setup.orig.py
titanlibcustom/extras/python/: CMakeLists.txt  MANIFEST.in  setup.in.py
titanlibcustom/include/: titanlibcustom.h
titanlibcustom/src/: CMakeLists.txt  background.cpp  buddy_check.cpp  buddy_event_check.cpp  dataset.cpp  duplicate_check.cpp  fgt.cpp  isolation_check.cpp  kdtree.cpp  lag_reduction_filter.cpp  metadata_check.cpp  point.cpp  points.cpp  range_check.cpp  sct.cpp  sct_resistant.cpp  swig.cpp  util.cpp
titanlibcustom/tests/: benchmark.py  buddy_check_test.py  buddy_check_test.r  buddy_event_check_test.py  bulk_test.py  climatology_check_test.py  dataset_test.py  duplicate_check.py  fgt_test.py  fgt_test.r  isolation_test.py  kdtree_test.py  range_check_test.py  sct_resistant_test.py  sct_resistant_test.r  sct_test.py  util_test.py
